--- a/src/Amazon.Api/Amazon.Api.csproj
+++ b/src/Amazon.Api/Amazon.Api.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Amazon.Infrastructure\Amazon.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
